# naivechain

./: .gitignore  README.md  docker-compose.yml  election.env  package-lock.json  show-tally.js  vote-client.js
authority-node/: Dockerfile  authority.js  package-lock.json  package.json
blockchain/: Dockerfile  main.js  package-lock.json  package.json
zk-service/: Cargo.toml  Dockerfile
zk-service/src/: main.rs
