[package]
name = "zk-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zk-paillier = "0.4.4"
hex = "0.4"

[dependencies.curv-kzen]
version = "0.10"
default-features = false

[dependencies.paillier]
package = "kzen-paillier"
version = "0.4.3"
default-features = false